# bazar_online

./: .gitignore  docker-compose.yaml
bazar_online_api/: .gitignore  Makefile  alembic.ini  hello.py  pyproject.toml
bazar_online_api/alembic/: env.py
bazar_online_api/alembic/versions/: 03f4bc4a6cdc_make_datetime_columns_timezone_aware.py  22bea670ab89_adjust_remaining_datetime_columns.py  bf2af68afd96_initial_migration_with_necessary_models.py  f19093c62313_changing_price_from_float_to_decimal.py  f60a24a2dca7_refactor_models_to_sqlalchemy_2_0_typed_.py
bazar_online_api/app/: main.py
bazar_online_api/app/api/: deps.py
bazar_online_api/app/api/v1/: router.py
bazar_online_api/app/api/v1/endpoints/: auth.py  catalog.py  category.py  product.py
bazar_online_api/app/core/: models.py  schemas.py  security.py  settings.py
bazar_online_api/app/core/repositories/: catalog.py  category.py  product.py  user.py
bazar_online_api/app/infra/: database.py
bazar_online_api/tests/: conftest.py  test_healthcheck.py
bazar_online_api/tests/api/v1/endpoints/: test_auth.py  test_catalog.py  test_category.py  test_product.py
bazar_online_api/tests/core/repositories/: test_catalog_repo.py  test_category_repo.py  test_product_repo.py  test_user_repo.py
